swap directory images

--- a/facefusion.ini
+++ b/facefusion.ini
@@ -1,74 +1,75 @@
 [general]
-source_paths =
-target_path =
-output_path =
+source_paths = D:/test_faces/lzl2/2tva.jpg D:/test_faces/lzl2/3jhd.jpg D:/test_faces/lzl2/chzqc.jpg D:/test_faces/lzl2/cmfkk.jpg D:/test_faces/lzl2/cnc3a.jpg D:/test_faces/lzl2/cp3fa.jpg D:/test_faces/lzl2/kvph.jpg D:/test_faces/lzl2/uqke.jpg D:/test_faces/lzl2/wpue.jpg D:/test_faces/lzl2/wrfc.jpg
+target_path = D:/test_faces/web
+output_path = D:/test_faces/output/web/lzl2
 
 [misc]
-force_download =
-skip_download =
-headless =
-log_level =
+force_download = 
+skip_download = True
+headless = True
+log_level = info
 
 [execution]
-execution_device_id =
-execution_providers =
-execution_thread_count =
-execution_queue_count =
+execution_device_id = 
+execution_providers = cuda cpu
+execution_thread_count = 14
+execution_queue_count = 2
 
 [memory]
-video_memory_strategy =
-system_memory_limit =
+video_memory_strategy = moderate
+system_memory_limit = 14
 
 [face_analyser]
-face_analyser_order =
-face_analyser_age =
-face_analyser_gender =
-face_detector_model =
-face_detector_size =
-face_detector_score =
-face_landmarker_score =
+face_analyser_order = 
+face_analyser_age = 
+face_analyser_gender = female
+face_detector_model = 
+face_detector_size = 
+face_detector_score = 
+face_landmarker_score = 
 
 [face_selector]
-face_selector_mode =
-reference_face_position =
-reference_face_distance =
-reference_frame_number =
+face_selector_mode = 
+reference_face_position = 
+reference_face_distance = 
+reference_frame_number = 
 
 [face_mask]
-face_mask_types =
-face_mask_blur =
-face_mask_padding =
-face_mask_regions =
+face_mask_types = 
+face_mask_blur = 
+face_mask_padding = 
+face_mask_regions = 
 
 [frame_extraction]
-trim_frame_start =
-trim_frame_end =
-temp_frame_format =
-keep_temp =
+trim_frame_start = 
+trim_frame_end = 
+temp_frame_format = 
+keep_temp = 
 
 [output_creation]
-output_image_quality =
-output_image_resolution =
-output_video_encoder =
-output_video_preset =
-output_video_quality =
-output_video_resolution =
-output_video_fps =
-skip_audio =
+output_image_quality = 
+output_image_resolution = 
+output_video_encoder = 
+output_video_preset = 
+output_video_quality = 
+output_video_resolution = 
+output_video_fps = 
+skip_audio = 
 
 [frame_processors]
-frame_processors =
-face_debugger_items =
-face_enhancer_model =
-face_enhancer_blend =
-face_swapper_model =
-frame_colorizer_model =
-frame_colorizer_blend =
-frame_colorizer_size =
-frame_enhancer_model =
-frame_enhancer_blend =
-lip_syncer_model =
+frame_processors = face_swapper face_enhancer
+face_debugger_items = 
+face_enhancer_model = 
+face_enhancer_blend = 
+face_swapper_model = 
+frame_colorizer_model = 
+frame_colorizer_blend = 
+frame_colorizer_size = 
+frame_enhancer_model = 
+frame_enhancer_blend = 
+lip_syncer_model = 
 
 [uis]
-open_browser =
-ui_layouts =
+open_browser = 
+ui_layouts = 
+
